--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.xlf
@@ -102,8 +102,8 @@
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Дополнительные сведения о</target>
         </trans-unit>
         <trans-unit id="Resx/spd_text_from256BitRD" translate="yes" xml:space="preserve">
-          <source>from 256 Bit Random Data</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">с 256-битным случайных данных</target>
+          <source>(256 Bit Random Data)</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">с 256-битным случайных данных</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/spd_msgUseEmptyPassword" translate="yes" xml:space="preserve">
           <source>Use empty password?</source>
@@ -197,9 +197,33 @@
           <source>Import with encoding: {0}</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Импорт с кодировкой: {0}</target>
         </trans-unit>
+        <trans-unit id="Resx/fnt_label_typeFace" translate="yes" xml:space="preserve">
+          <source>_Typeface:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">_Typeface:</target>
+        </trans-unit>
+        <trans-unit id="Resx/fnt_theQuickBrownFox" translate="yes" xml:space="preserve">
+          <source>The quick brown fox jumps over the lazy dog</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Выпей переходит через ленивый собака</target>
+        </trans-unit>
+        <trans-unit id="Resx/fnt_labelSize" translate="yes" xml:space="preserve">
+          <source>_Size:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Ра_змер:</target>
+        </trans-unit>
+        <trans-unit id="Resx/fnt_labelPreview" translate="yes" xml:space="preserve">
+          <source>Preview:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Предварительный просмотр:</target>
+        </trans-unit>
+        <trans-unit id="Resx/fnt_labelFontFamilies" translate="yes" xml:space="preserve">
+          <source>_Font family:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Семейство _Font:</target>
+        </trans-unit>
         <trans-unit id="Resx/termDefaults" translate="yes" xml:space="preserve">
           <source>Defaults</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Значения по умолчанию</target>
+        </trans-unit>
+        <trans-unit id="Resx/termOK" translate="yes" xml:space="preserve">
+          <source>OK</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">OK</target>
         </trans-unit>
         <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
           <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
@@ -270,8 +294,8 @@
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Пароль</target>
         </trans-unit>
         <trans-unit id="Resx/termEncrypt" translate="yes" xml:space="preserve">
-          <source>Encrypt!</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Шифрование!</target>
+          <source>Encrypt</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Шифрование!</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/termDecrypt" translate="yes" xml:space="preserve">
           <source>Decrypt</source>
@@ -302,8 +326,8 @@
           <target state="needs-review-translation" state-qualifier="mt-suggestion">При шифровании и сохранении:</target>
         </trans-unit>
         <trans-unit id="Resx/operationDecryptOpenedFile" translate="yes" xml:space="preserve">
-          <source>Decrypting the file being opened:</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Расшифровка открываемый файл:</target>
+          <source>Decrypting loaded file:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Расшифровка открываемый файл:</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/operationDecryption" translate="yes" xml:space="preserve">
           <source>Decrypting:</source>
