--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.qps-ploc.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.qps-ploc.xlf
@@ -226,6 +226,10 @@
           <source>OK</source>
           <target state="new">OK</target>
         </trans-unit>
+        <trans-unit id="Resx/spd_btntext_ClearPWFromMemory" translate="yes" xml:space="preserve">
+          <source>Clear Session Password</source>
+          <target state="new">Clear Session Password</target>
+        </trans-unit>
         <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
           <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
           <target state="new">The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</target>
