--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.xlf
@@ -225,6 +225,10 @@
           <source>OK</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">OK</target>
         </trans-unit>
+        <trans-unit id="Resx/spd_btntext_ClearPWFromMemory" translate="yes" xml:space="preserve">
+          <source>Clear Session Password</source>
+          <target state="new">Clear Session Password</target>
+        </trans-unit>
         <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
           <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Этот параметр влияет на необходимые вычислительные операции для создания хэш-кода BCrypt. Большее значение означает больше работы.</target>
